# AegisHV

./: .dockerignore  .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-BINARY  Makefile  README.md  RELEASE.md  RELEASE_CHECKLIST.md  config.example.toml  deny.toml  kernel.ld  run-qemu.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: backend_task.md  bug_report.md  detector_task.md  feature_request.md  release_task.md
.github/workflows/: amd-hardware.yml  ci.yml  hardware.yml  release.yml
api/: event.proto
api/schemas/: event.schema.json
boot/: README.md
configs/: policies.yaml
crates/aegishv-arch-arm64/: Cargo.toml
crates/aegishv-arch-arm64/src/: esr.rs  features.rs  gic.rs  lab.rs  lib.rs  stage2.rs  timer.rs  tlbi.rs  traps.rs  vectors.rs  vtcr.rs
crates/aegishv-arch-x86/: Cargo.toml
crates/aegishv-arch-x86/src/: acpi.rs  ap_startup.rs  lib.rs  paging.rs  serial.rs
crates/aegishv-arch-x86/src/svm/: asid.rs  exits.rs  features.rs  hardware.rs  instructions.rs  lab.rs  mod.rs  npt.rs  runtime.rs  traps.rs  vmcb.rs
crates/aegishv-arch-x86/src/vmx/: capabilities.rs  controls.rs  ept.rs  exits.rs  features.rs  hardware.rs  instructions.rs  lab.rs  mod.rs  region.rs  runtime.rs  toy_exit.rs  traps.rs  vmcs.rs  vmcs_config.rs
crates/aegishv-devices/: Cargo.toml
crates/aegishv-devices/src/: block.rs  console.rs  error.rs  lib.rs  net.rs  virtio_mmio.rs
crates/aegishv-event-abi/: Cargo.toml
crates/aegishv-event-abi/src/: lib.rs
crates/aegishv-type1-boot/: Cargo.toml
crates/aegishv-type1-boot/src/: entry.rs  handoff.rs  image.rs  layout.rs  lib.rs  limine.rs
crates/aegishv-type1-kernel/: Cargo.toml  build.rs
crates/aegishv-type1-kernel/src/: early_memory.rs  host_paging.rs  lib.rs  main.rs  toy_guest.rs
devharness/: Cargo.toml
devharness/src/: kvmmini.rs  main.rs
docs/: ARCHITECTURE.md  ARM64_LAB.md  ATTESTATION.md  BUILD.md  COMPATIBILITY.md  DEPLOYMENT.md  DEPLOYMENT_GAP_REVIEW.md  DESIGN.md  DETECTION_LIMITS.md  DETECTOR_ENGINE.md  EVENT_EXPORT.md  EVENT_MAPPINGS.md  EVENT_REDACTION.md  EVENT_SIGNING.md  HARDWARE_TEST_MATRIX.md  HOST_SENSOR_RELEASE_PLAN.md  INCIDENT_RESPONSE.md  MANAGEMENT_API.md  METRICS.md  MITRE_MAPPING.md  NETWORK_ISOLATION.md  PERFORMANCE.md  PMU.md  POLICY_BUNDLES.md  ROADMAP.md  SECURITY.md  SECURITY_REVIEW_CHECKLIST.md  STATUS.md  SVM_LAB.md  SYSCALLS.md  TESTING.md  THREAT_MODEL.md  TRAP_ENGINE.md  TROUBLESHOOTING.md  TYPE1_BOOT_BOUNDARY.md  TYPE1_INVARIANTS.md  TYPE1_LAB_MILESTONE.md  TYPE1_READINESS_GATE.md  TYPE1_ROADMAP.md  UPDATE.md  (+7 more)
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/corpus/config_input/: malformed_rule.toml
fuzz/corpus/qmp_action_safety/: ambiguous_identity.seed  conflicting_identity.seed  low_confidence.seed  missing_identity.seed  pid_only_identity.seed  stale_identity.seed  unverified_identity.seed
fuzz/corpus/trace_format_metadata/: empty_fields.txt  kvm_exit_format.txt
fuzz/corpus/trace_parser_line/: ept_violation.txt  unrelated.txt
fuzz/fuzz_targets/: config_input.rs  qmp_action_safety.rs  trace_format_metadata.rs  trace_parser_line.rs
grub/: grub.cfg
hv/: Makefile
hv/x86/: ept.c  (+8 more)
schema/: event.schema.json  snapshot.schema.json
scripts/: arm64-el2-lab-smoke.sh  bench-trace-ingest.sh  bench-trap-synthetic.sh  bench-vmi-translate.sh  bench-wx-state.sh  build-type1-kernel.sh  build-type1-limine-iso.sh  build-type1-skeleton.sh  build_dev.sh  build_iso.sh  check-doc-links.sh  check-lockfile.sh  check-type1-host-text.sh  check-type1-lab-tools.sh  collect-provenance-bundle.sh  generate-sbom.sh  inspect-type1-kernel.sh  live-kvm-integration.sh  live-tracefs-smoke.sh  package-debian.sh  package-release.sh  package-rpm.sh  plan-type1-image.sh  run-type1-lab.sh  run_dev.sh  sign-release-artifacts.sh  smoke-replay.sh  stage-type1-limine-iso.sh  svm-amd-lab-smoke.sh  type1-qemu-evidence.sh  type1-qemu-smoke.sh  validate-jsonl-schema.py  vmx-linux-lab-smoke.sh
src/: actions.rs  admin.rs  approvals.rs  audit.rs  boot.asm  build_info.rs  collector.rs  config.rs  event.rs  evidence.rs  gdt.asm  hypervisor.rs  identity.rs  incidents.rs  lib.rs  linux_bpf.rs  linux_detectors.rs  linux_hooks.rs  linux_integrity.rs  linux_symbols.rs  linux_syscall.rs  linux_vmi.rs  linux_x86.rs  main.rs  metrics.rs  parser.rs  pattern.rs  pmu.rs  pmu_sampling.rs  policy.rs  policy_bundle.rs  rbac.rs  tamper.rs  trace_format.rs  tracefs.rs  util.rs  vmi.rs  vmi_arm64.rs  vmi_cache.rs  vmi_fixture.rs  (+16 more)
tests/: adr_tests.rs  agents_tests.rs  apparmor_profile_tests.rs  backlog_tests.rs  benchmark_script_tests.rs  chaos_output_tests.rs  config_tests.rs  container_release_tests.rs  corpus_tests.rs  debian_packaging_tests.rs  dependency_policy_tests.rs  detectors_core_tests.rs  detectors_inventory_memory_tests.rs  detectors_normalizer_tests.rs  detectors_state_incident_tests.rs  doc_claims_tests.rs  fuzz_harness_tests.rs  github_templates_tests.rs  golden_tests.rs  hardware_workflow_tests.rs  linux_bpf_tests.rs  linux_detector_tests.rs  linux_hooks_tests.rs  linux_integrity_tests.rs  linux_symbol_tests.rs  linux_syscall_tests.rs  linux_vmi_tests.rs  linux_x86_tests.rs  live_tracefs_smoke_tests.rs  management_security_tests.rs  metrics_tests.rs  ownership_tests.rs  parser_tests.rs  redaction_policy_tests.rs  release_provenance_tests.rs  release_readiness_tests.rs  release_sbom_tests.rs  release_signing_tests.rs  rpm_packaging_tests.rs  schema_compatibility_examples_tests.rs  (+38 more)
tools/: enable_tracefs.sh
userspace/aegisd/: Cargo.toml
userspace/aegisd/src/: main.rs
(+113 files in other folders)
