[package]
name = "aegishv"
version = "0.1.0"
edition = "2021"
description = "Type-1 style EDR via KVM tracefs: EPT/NPT W^X/exec traps, PMU sampling, Prometheus/JSON."
license = "MIT"
authors = ["AegisHV Authors"]

[dependencies]
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
crossbeam-channel = "0.5.13"
once_cell = "1.19.0"
dashmap = "5.5.3"
thiserror = "1.0.63"
tiny_http = "0.12.0"
libc = "0.2.155"
toml = "0.8.14"
time = { version = "0.3.36", features = ["formatting"] }
anyhow = "1.0.86"
ctrlc = "3.4.5"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
tempfile = "3.10.1"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = "z"
