[package]
name = "aegishv"
version = "0.4.0"
edition = "2021"
rust-version = "1.81"
default-run = "aegishv"
description = "Host-side KVM telemetry sensor with strict JSONL events, W^X correlation, Prometheus metrics, policy actions, replay tests, and clean backend boundaries for future VMI/trap/type-1 work."
license = "MIT"
authors = ["Wythwool", "Nullbit1"]
readme = "README.md"

[workspace]
members = [
    ".",
    "crates/aegishv-hypervisor-core",
    "crates/aegishv-event-abi",
    "crates/aegishv-arch-x86",
    "crates/aegishv-arch-arm64",
    "crates/aegishv-devices",
    "crates/aegishv-type1-boot",
    "crates/aegishv-type1-kernel",
]
exclude = ["fuzz"]
resolver = "2"

[package.metadata.aegishv.ownership]
creator = "https://github.com/Wythwool"
organization = "https://github.com/Nullbit1"

[dependencies]

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = "z"
strip = "symbols"
