[package]
name = "devharness"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prometheus = "0.13"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
nix = "0.28"
# KVM crates (build on Linux)
kvm-ioctls = "0.16"
kvm-bindings = "0.7"
clap = { version = "4", features = ["derive"] }
