[package]
name = "aegishv-devices"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "MIT"
description = "bounded device model helpers for AegisHV lab and isolation planning"

[features]
default = []
std = ["aegishv-hypervisor-core/std"]

[dependencies]
aegishv-hypervisor-core = { path = "../aegishv-hypervisor-core" }
