[package]
name = "aegishv-event-abi"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "MIT"
description = "no_std AegisHV event and command ring ABI facade"

[features]
default = []
std = ["aegishv-hypervisor-core/std"]

[dependencies]
aegishv-hypervisor-core = { path = "../aegishv-hypervisor-core" }
